<resources>
    <string name="app_name">Materius</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mister X</string>
    <string name="nav_header_subtitle">test@test.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_vegetables">Veggies</string>
    <string name="menu_fruits">Fruits</string>
    <string name="menu_nature">Nature</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_name">Enter name:</string>
    <string name="log_in">Log in</string>
    <string name="text_name_hint">Enter your nickname</string>
    <string name="buttonCancel">Close</string>
    <string name="textviewveggies">Прячется в земле плутовка,\nОчень глубоко и ловко,\nОт вредителей морковка.\nЧтобы никакая совка,\n\nКолорадские жуки,\nЧерви, тля и слизняки\nКорнеплод не повредили.\nВедь не зря ее растили\n\nОт всех бед оберегали,\nЧем могли всем помогали,\nЧтобы выросла большой\nС очень сладкою душой.\n\nПрячется в земле плутовка,\nОчень глубоко и ловко,\nОт вредителей морковка.\nЧтобы никакая совка,\n\nКолорадские жуки,\nЧерви, тля и слизняки\nКорнеплод не повредили.\nВедь не зря ее растили\n\nОт всех бед оберегали,\nЧем могли всем помогали,\nЧтобы выросла большой\nС очень сладкою душой.\n\nПрячется в земле плутовка,\nОчень глубоко и ловко,\nОт вредителей морковка.\nЧтобы никакая совка,\n\nКолорадские жуки,\nЧерви, тля и слизняки\nКорнеплод не повредили.\nВедь не зря ее растили\n\nОт всех бед оберегали,\nЧем могли всем помогали,\nЧтобы выросла большой\nС очень сладкою душой.</string>
    <string name="textvieworange">Мы делили апельсин,\nМного нас, а он один.\nЭта долька — для ежа,\nЭта долька — для стрижа,\nЭта долька — для утят,\nЭта долька — для котят,\nЭта долька — для бобра,\nА для волка — кожура.\nОн сердит на нас — беда!!!\nРазбегайтесь кто-куда!\nМы делили апельсин,\nМного нас, а он один.\nЭта долька — для ежа,\nЭта долька — для стрижа,\nЭта долька — для утят,\nЭта долька — для котят,\nЭта долька — для бобра,\nА для волка — кожура.\nОн сердит на нас — беда!!!\nРазбегайтесь кто-куда!</string>
    <string name="textviewnatures">Дурная почва: слишком узловат\nИ этот дуб, и нет великолепья\nВ его ветвях. Какие-то отрепья\nТорчат на нем и глухо шелестят.\n\nНо скрученные намертво суставы\nОн так развил, что, кажется, ударь —\nИ запоет он колоколом славы,\nИ из ствола закапает янтарь.\n\nВглядись в него: он важен и спокоен\nСреди своих безжизненных равнин.\nКто говорит, что в поле он не воин?\nОн воин в поле, даже и один.\n\nДурная почва: слишком узловат\nИ этот дуб, и нет великолепья\nВ его ветвях. Какие-то отрепья\nТорчат на нем и глухо шелестят.\n\nНо скрученные намертво суставы\nОн так развил, что, кажется, ударь —\nИ запоет он колоколом славы,\nИ из ствола закапает янтарь.\n\nВглядись в него: он важен и спокоен\nСреди своих безжизненных равнин.\nКто говорит, что в поле он не воин?\nОн воин в поле, даже и один.</string>
</resources>
