<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_vegetable">

    <fragment
        android:id="@+id/nav_vegetable"
        android:name="ru.payts.materius.ui.home.HomeFragment"
        android:label="@string/menu_vegetables"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_nav_vegetable_to_nav_fruits"
            app:destination="@id/nav_fruits" />
    </fragment>

    <fragment
        android:id="@+id/nav_fruits"
        android:name="ru.payts.materius.ui.gallery.GalleryFragment"
        android:label="@string/menu_fruits"
        tools:layout="@layout/fragment_gallery" >
        <action
            android:id="@+id/action_nav_fruits_to_nav_nature"
            app:destination="@id/nav_nature" />
    </fragment>

    <fragment
        android:id="@+id/nav_nature"
        android:name="ru.payts.materius.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_nature"
        tools:layout="@layout/fragment_slideshow" >
        <action
            android:id="@+id/action_nav_nature_to_nav_vegetable"
            app:destination="@id/nav_vegetable" />
    </fragment>
</navigation>